syntax = "proto3";
option java_multiple_files = true;
option java_package = "via.sdj3.slaughterhouse.protobuf";

service SlaughterhouseServer
{
  rpc createAnimal(AnimalToCreate) returns (Animal);
  rpc createProduct(ProductToCreate) returns(Product);
  rpc getAllAnimalsFromProduct(ProductRegNumber) returns(AnimalsFromProduct);
  rpc getAllProductFromAnimal(AnimalRegistrationNumber) returns(ProductsFromAnimal);
  rpc getAnimalById(AnimalRegistrationNumber) returns(Animal);
  rpc getAnimalsByOrigin(Origin) returns(AnimalsFromProduct);
  rpc getAnimalsByDate(Date) returns(AnimalsFromProduct);
}

message ProductRegNumber{
   int64 registrationNumber =1;
}

message Product {
  int64 registrationNumber = 1;
  repeated Animal animals =2;
}

message ProductToCreate{
  repeated AnimalRegistrationNumber animals = 1;
}

message Animal {
  string date =1;
  double weight = 2;
  int64 registrationNumber = 3;
  string origin=4;
}

message AnimalToCreate{
  string date =1;
  double weight = 2;
  string origin=4;
}

message AnimalsFromProduct {
  repeated Animal animals = 1;
}

message AnimalRegistrationNumber {
  int64 animalRegistrationNumber = 1;
}

  message ProductsFromAnimal {
    repeated Product products = 1;
  }

  message Origin{
  string origin = 1;
  }

  message Date{
  string localdate = 1;
  }
